<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_phone_number"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stlight.Activity.AddPhoneNumberActivity">
    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_add_number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:id="@+id/phone_edt"
        android:hint="@string/phone_number_hint"
       style="@style/EditTextTheme"
        android:layout_below="@id/toolbar_add_number"
        android:lines="1"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/phone_edt"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/device_number_hint"
        android:id="@+id/device_edt"
        android:paddingLeft="10dp"
        style="@style/EditTextTheme"
        android:lines="1"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/device_edt"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/device_name_hint"
        android:id="@+id/device_name_edt"
        android:paddingLeft="10dp"
        style="@style/EditTextTheme"
        android:lines="1"
        />

    <Button
        android:text="@string/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_name_edt"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/add_btn"
       style="@style/ButtonTheme"/>

    <Button
        android:text="@string/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/next_btn"
        style="@style/ButtonTheme"
        android:visibility="gone"
       />

    <include
        layout="@layout/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
