<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_message_schedule_activry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stlight.Activity.MessageScheduleActivity">
    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_msg_schedule"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/schedule_footer"
        android:layout_below="@id/toolbar_msg_schedule"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
          <!--  <Spinner
                android:id="@+id/spinner_sim"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/spinner_bg"
                />-->
            <Spinner
                android:id="@+id/spinner_device_number"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/spinner_bg"
                />
            <Spinner
                android:id="@+id/spinner_device_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/spinner_bg"
                />

            <include
                layout="@layout/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/datePicket"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/list_of_days_txt"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <include
                layout="@layout/day_recycleview"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/day_recycleView"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
            <include
                layout="@layout/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timePiker"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/schedule_add_btn"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/add_btn" />

            <Button
                android:id="@+id/schedule_add_btnTemp"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:onClick="listofdays"
                android:text="Add1" />

            <include
                layout="@layout/slot_recycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/slot_recycleView"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                />

            <Button
                android:id="@+id/schedule_btn"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:text="@string/schedule_btn" />
        </LinearLayout>
    </ScrollView>



    <include
        layout="@layout/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/schedule_footer"
        />
</RelativeLayout>
